# whoopee

./: .env.op  .envrc  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
lib/py/eightsleep/: README.md  pyproject.toml
lib/py/eightsleep/eightsleep/: __init__.py  cli.py  client.py
lib/py/eightsleep/eightsleep/pyeight/: __init__.py  _types.py  user.py  util.py
lib/py/whoop/: README.md  pyproject.toml
lib/py/whoop/whoop/: __init__.py  cli.py  client.py  oauth.py
lib/ts/whoop/: package.json  tsconfig.json
lib/ts/whoop/src/: index.ts
projects/dashboard/: README.md  pyproject.toml
projects/dashboard/dashboard/: app.py  data.py  fusion.py
projects/dashboard/static/: index.html
tools/: load-env.sh  serve.sh  whoopee
