[project]
name = "eightsleep"
version = "0.1.0"
description = "Eight Sleep client: thin wrapper over pyeight (unofficial OAuth2 API) for nightly sleep + biometric pulls."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "aiohttp>=3.8",
 "httpx>=0.27",
 "python-dateutil>=2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eightsleep"]
